prepare for jdk9